feat: improve error message for NotSupportedServiceRoleException (#152)
(cherry picked from commit d5f19e99d2b230fd0992186d31b2a4490d58e844)

# Conflicts:
#	dbaas/dbaas-aggregator/src/main/java/org/qubership/cloud/dbaas/controller/v3/AggregatedDatabaseAdministrationControllerV3.java
#	dbaas/dbaas-aggregator/src/test/java/org/qubership/cloud/dbaas/controller/v3/AggregatedDatabaseAdministrationControllerV3Test.java