@@ -3,7 +3,6 @@ package org.qubership.cloud.dbaas.controller.v3;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.qubership.cloud.dbaas.dto.ClassifierWithRolesRequest;
-import org.qubership.cloud.dbaas.dto.role.Role;
 import org.qubership.cloud.dbaas.dto.v3.*;
 import org.qubership.cloud.dbaas.entity.pg.*;
 import org.qubership.cloud.dbaas.exceptions.ErrorCodes;
@@ -24,7 +23,6 @@ import io.quarkus.test.junit.mockito.MockitoConfig;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.core.MediaType;
 import lombok.extern.slf4j.Slf4j;
-
 import org.hibernate.exception.ConstraintViolationException;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -34,21 +32,17 @@ import org.postgresql.util.PSQLException;
 import org.postgresql.util.PSQLState;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static org.qubership.cloud.dbaas.Constants.ACTIVE_STATE;
-import static org.qubership.cloud.dbaas.Constants.IDLE_STATE;
-import static org.qubership.cloud.dbaas.Constants.NAMESPACE;
-import static org.qubership.cloud.dbaas.Constants.ROLE;
-import static org.qubership.cloud.dbaas.DbaasApiPath.ASYNC_PARAMETER;
-import static org.qubership.cloud.dbaas.DbaasApiPath.LIST_DATABASES_PATH;
-import static org.qubership.cloud.dbaas.DbaasApiPath.NAMESPACE_PARAMETER;
+import static org.qubership.cloud.dbaas.Constants.*;
+import static org.qubership.cloud.dbaas.DatabaseType.CASSANDRA;
+import static org.qubership.cloud.dbaas.DatabaseType.POSTGRESQL;
+import static org.qubership.cloud.dbaas.DbaasApiPath.*;
+import static org.qubership.cloud.dbaas.dto.role.Role.ADMIN;
 import static io.restassured.RestAssured.given;
 import static jakarta.ws.rs.core.Response.Status.*;
 import static java.util.Collections.singletonList;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
+import static org.hamcrest.Matchers.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
@@ -60,11 +54,14 @@ import static org.mockito.Mockito.*;
 class AggregatedDatabaseAdministrationControllerV3Test {
 
     private static final String PHYSICAL_DATABASE_ID = "some_physical_database_id";
-    private static final String TEST_CONTROLLER_NAMESPACE = "test-controller-namespace";
+    private static final String TEST_RO_HOST = "test-ro-host";
     private static final String TEST_NAME = "test-db";
     private static final String TEST_NAMESPACE = "test-namespace";
+    private static final String TEST_ANOTHER_NAMESPACE = "test-namespace_2";
+    private static final String TEST_CONTROLLER_NAMESPACE = "test-controller-namespace";
     private static final String TEST_NAMESPACE_IDLE = "test-namespace-idle";
-    private static final String TEST_RO_HOST = "test-ro-host";
+    private static final String TEST_MS_NAME = "test_name";
+    private static final String TEST_ANOTHER_MS_NAME = "test_name_2";
 
     @InjectMock
     DatabaseRegistryDbaasRepository databaseRegistryDbaasRepository;
@@ -97,22 +94,22 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     void testCreateDatabaseWithRoHost() throws JsonProcessingException {
         when(dBaaService.getConnectionPropertiesService()).thenReturn(processConnectionPropertiesService);
         PhysicalDatabase physicalDatabase = new PhysicalDatabase();
-        physicalDatabase.setPhysicalDatabaseIdentifier("test-id");
+        physicalDatabase.setPhysicalDatabaseIdentifier(PHYSICAL_DATABASE_ID);
         physicalDatabase.setRoHost(TEST_RO_HOST);
         when(physicalDatabasesService.searchInPhysicalDatabaseCache(any())).thenReturn(physicalDatabase);
 
         final DatabaseCreateRequestV3 databaseCreateRequest = getDatabaseCreateRequestSample();
         when(declarativeConfigRepository.findFirstByClassifierAndType(any(), any())).thenReturn(Optional.empty());
-        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(Role.ADMIN.toString());
+        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(ADMIN.toString());
         when(databaseRegistryDbaasRepository.saveAnyTypeLogDb(any(DatabaseRegistry.class))).thenThrow(new ConstraintViolationException("constraint violation", new PSQLException("constraint violation", PSQLState.UNIQUE_VIOLATION), "database_registry_classifier_and_type_index"));
 
         final DatabaseRegistry database = getDatabaseSample();
-        database.setPhysicalDatabaseId("test-id");
-        when(dBaaService.findDatabaseByClassifierAndType(any(), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().get(0));
+        database.setPhysicalDatabaseId(PHYSICAL_DATABASE_ID);
+        when(dBaaService.findDatabaseByClassifierAndType(any(), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().getFirst());
         when(dBaaService.isModifiedFields(any(), any())).thenReturn(true);
         when(dBaaService.detach(database)).thenReturn(database);
         when(dBaaService.isModifiedFields(any(), any())).thenReturn(false);
-        DatabaseResponseV3 response = new DatabaseResponseV3SingleCP(database.getDatabaseRegistry().get(0), PHYSICAL_DATABASE_ID, Role.ADMIN.toString());
+        DatabaseResponseV3 response = new DatabaseResponseV3SingleCP(database.getDatabaseRegistry().getFirst(), PHYSICAL_DATABASE_ID, ADMIN.toString());
         when(dBaaService.processConnectionPropertiesV3(any(DatabaseRegistry.class), any())).thenReturn(response);
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
@@ -141,9 +138,9 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         final DatabaseRegistry database = getDatabaseSample();
         when(dBaaService.findDatabaseByClassifierAndType(eq(databaseCreateRequest.getClassifier()), any(), anyBoolean())).thenReturn(null);
 
-        when(dBaaService.findDatabaseByClassifierAndType(eq(activeClassifier), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().get(0));
+        when(dBaaService.findDatabaseByClassifierAndType(eq(activeClassifier), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().getFirst());
         when(blueGreenService.getDomainByControllerNamespace(TEST_CONTROLLER_NAMESPACE)).thenReturn(Optional.of(bgDomain));
-        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(Role.ADMIN.toString());
+        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(ADMIN.toString());
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
@@ -193,7 +190,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         final DatabaseRegistry database = getDatabaseSample();
         when(dBaaService.findDatabaseByClassifierAndType(eq(databaseCreateRequest.getClassifier()), any(), anyBoolean())).thenReturn(null);
 
-        when(dBaaService.findDatabaseByClassifierAndType(eq(activeClassifier), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().get(0));
+        when(dBaaService.findDatabaseByClassifierAndType(eq(activeClassifier), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().getFirst());
         when(blueGreenService.getDomainByControllerNamespace(TEST_CONTROLLER_NAMESPACE)).thenReturn(Optional.of(bgDomain));
         Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(null);
 
@@ -207,11 +204,28 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     }
 
     @Test
+    void testCreateDatabase_ExistsButNoPolicy() throws Exception {
+        DatabaseCreateRequestV3 databaseCreateRequest = getDatabaseCreateRequestSample();
+        databaseCreateRequest.setOriginService(TEST_ANOTHER_MS_NAME);
+
+        when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(null);
+
+        given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
+                .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(objectMapper.writeValueAsString(databaseCreateRequest))
+                .when().put()
+                .then()
+                .statusCode(FORBIDDEN.getStatusCode())
+                .body("message", stringContainsInOrder(databaseCreateRequest.getUserRole(), TEST_MS_NAME, TEST_ANOTHER_MS_NAME));
+    }
+
+    @Test
     void testCreateDatabase() throws JsonProcessingException {
         when(dBaaService.getConnectionPropertiesService()).thenReturn(processConnectionPropertiesService);
         final DatabaseCreateRequestV3 databaseCreateRequest = getDatabaseCreateRequestSample();
         when(declarativeConfigRepository.findFirstByClassifierAndType(any(), any())).thenReturn(Optional.empty());
-        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(Role.ADMIN.toString());
+        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(ADMIN.toString());
         when(databaseRegistryDbaasRepository.saveAnyTypeLogDb(any(DatabaseRegistry.class))).thenThrow(new ConstraintViolationException("constraint violation", new PSQLException("constraint violation", PSQLState.UNIQUE_VIOLATION), "database_registry_classifier_and_type_index"));
         when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(anyMap(), anyString())).thenReturn(Optional.of(Mockito.mock(DatabaseRegistry.class)));
 
@@ -224,7 +238,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .statusCode(CONFLICT.getStatusCode());
 
         final DatabaseRegistry database = getDatabaseSample();
-        when(dBaaService.findDatabaseByClassifierAndType(any(), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().get(0));
+        when(dBaaService.findDatabaseByClassifierAndType(any(), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().getFirst());
         when(dBaaService.isModifiedFields(any(), any())).thenReturn(true);
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
@@ -245,7 +259,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
 
         when(dBaaService.detach(database)).thenReturn(database);
         when(dBaaService.isModifiedFields(any(), any())).thenReturn(false);
-        DatabaseResponseV3 response = new DatabaseResponseV3SingleCP(database.getDatabaseRegistry().get(0), PHYSICAL_DATABASE_ID, Role.ADMIN.toString());
+        DatabaseResponseV3 response = new DatabaseResponseV3SingleCP(database.getDatabaseRegistry().getFirst(), PHYSICAL_DATABASE_ID, ADMIN.toString());
         when(dBaaService.processConnectionPropertiesV3(any(DatabaseRegistry.class), any())).thenReturn(response);
         PhysicalDatabase physicalDatabase = new PhysicalDatabase();
 
@@ -295,7 +309,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         when(dBaaService.getConnectionPropertiesService()).thenReturn(processConnectionPropertiesService);
         final DatabaseCreateRequestV3 databaseCreateRequest = getDatabaseCreateRequestSample();
         when(declarativeConfigRepository.findFirstByClassifierAndType(any(), any())).thenReturn(Optional.empty());
-        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(Role.ADMIN.toString());
+        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(ADMIN.toString());
         when(databaseRegistryDbaasRepository.saveAnyTypeLogDb(any(DatabaseRegistry.class))).thenThrow(new ConstraintViolationException("constraint violation", new PSQLException("constraint violation", PSQLState.UNIQUE_VIOLATION), "database_registry_classifier_and_type_index"));
         when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(anyMap(), anyString())).thenReturn(Optional.of(Mockito.mock(DatabaseRegistry.class)));
 
@@ -309,7 +323,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .statusCode(CONFLICT.getStatusCode());
 
         final DatabaseRegistry database = getDatabaseSample();
-        when(dBaaService.findDatabaseByClassifierAndType(any(), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().get(0));
+        when(dBaaService.findDatabaseByClassifierAndType(any(), any(), anyBoolean())).thenReturn(database.getDatabaseRegistry().getFirst());
         when(dBaaService.isModifiedFields(any(), any())).thenReturn(true);
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
@@ -332,7 +346,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
 
         when(dBaaService.detach(database)).thenReturn(database);
         when(dBaaService.isModifiedFields(any(), any())).thenReturn(false);
-        DatabaseResponseV3 response = new DatabaseResponseV3SingleCP(database.getDatabaseRegistry().get(0), PHYSICAL_DATABASE_ID, Role.ADMIN.toString());
+        DatabaseResponseV3 response = new DatabaseResponseV3SingleCP(database.getDatabaseRegistry().getFirst(), PHYSICAL_DATABASE_ID, ADMIN.toString());
         when(dBaaService.processConnectionPropertiesV3(any(DatabaseRegistry.class), any())).thenReturn(response);
         PhysicalDatabase physicalDatabase = new PhysicalDatabase();
 
@@ -380,7 +394,6 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .statusCode(ACCEPTED.getStatusCode());
 
 
-
     }
 
     @Test
@@ -388,10 +401,10 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         when(dBaaService.getConnectionPropertiesService()).thenReturn(processConnectionPropertiesService);
         DatabaseCreateRequestV3 databaseCreateRequest = getDatabaseCreateRequestSample();
         Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any()))
-                .thenReturn(Role.ADMIN.toString());
+                .thenReturn(ADMIN.toString());
         when(declarativeConfigRepository.findFirstByClassifierAndType(any(), any())).thenReturn(Optional.empty());
 
-        String namespace = "real-namespace";
+        String namespace = TEST_ANOTHER_NAMESPACE;
         databaseCreateRequest.getClassifier().put("namespace", namespace);
         when(dBaaService.createDatabase(eq(databaseCreateRequest), eq(namespace), any()))
                 .thenReturn(Optional.of(getCreatedDatabaseV3Sample()));
@@ -426,7 +439,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
 
     @Test
     void testDbTypeCannotBeEmptyOrNull() {
-        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(Role.ADMIN.toString());
+        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(ADMIN.toString());
         String body = "{\"classifier\":{\"microserviceName\":\"test_name\",\"scope\":\"service\",\"namespace\":\"test-namespace\"},\"originService\":\"test_name\"}";
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
@@ -532,7 +545,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     @Test
     void testGetAllDatabases() {
         final DatabaseRegistry database = getDatabaseSample();
-        when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(singletonList(database.getDatabaseRegistry().get(0)));
+        when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(singletonList(database.getDatabaseRegistry().getFirst()));
         when(dBaaService.getConnectionPropertiesService()).thenReturn(processConnectionPropertiesService);
         PhysicalDatabase physicalDatabase = new PhysicalDatabase();
         physicalDatabase.setId(PHYSICAL_DATABASE_ID);
@@ -549,7 +562,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     void testGetAllDatabasesWithResources() {
         when(dBaaService.getConnectionPropertiesService()).thenReturn(processConnectionPropertiesService);
         final DatabaseRegistry database = getDatabaseSample();
-        when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(singletonList(database.getDatabaseRegistry().get(0)));
+        when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(singletonList(database.getDatabaseRegistry().getFirst()));
         PhysicalDatabase physicalDatabase = new PhysicalDatabase();
         physicalDatabase.setId(PHYSICAL_DATABASE_ID);
 
@@ -567,7 +580,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     void testGetAllDatabasesWithResourcesParamNotSpecify() {
         when(dBaaService.getConnectionPropertiesService()).thenReturn(processConnectionPropertiesService);
         final DatabaseRegistry database = getDatabaseSample();
-        when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(singletonList(database.getDatabaseRegistry().get(0)));
+        when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(singletonList(database.getDatabaseRegistry().getFirst()));
         PhysicalDatabase physicalDatabase = new PhysicalDatabase();
         physicalDatabase.setId(PHYSICAL_DATABASE_ID);
 
@@ -585,7 +598,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         when(dBaaService.getConnectionPropertiesService()).thenReturn(processConnectionPropertiesService);
         final DatabaseRegistry database = getDatabaseSample();
         database.setAdapterId("adapter-id");
-        when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(singletonList(database.getDatabaseRegistry().get(0)));
+        when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(singletonList(database.getDatabaseRegistry().getFirst()));
         when(physicalDatabasesService.getByAdapterId("adapter-id")).thenReturn(new PhysicalDatabase());
         PhysicalDatabase physicalDatabase = new PhysicalDatabase();
         physicalDatabase.setId(PHYSICAL_DATABASE_ID);
@@ -605,29 +618,28 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         final Map<String, Object> classifier = getSampleClassifier();
         ClassifierWithRolesRequest classifierWithRolesRequest = new ClassifierWithRolesRequest();
         classifierWithRolesRequest.setClassifier(classifier);
-        classifierWithRolesRequest.setUserRole(Role.ADMIN.toString());
-        classifierWithRolesRequest.setOriginService("test");
-        final String testType = "test-type";
+        classifierWithRolesRequest.setUserRole(ADMIN.toString());
+        classifierWithRolesRequest.setOriginService(TEST_MS_NAME);
         Mockito.when(dBaaService.isValidClassifierV3(any())).thenCallRealMethod();
-        doReturn(Role.ADMIN.toString()).when(databaseRolesService).getSupportedRoleFromRequest(any(ClassifierWithRolesRequest.class), any(), any());
+        doReturn(ADMIN.toString()).when(databaseRolesService).getSupportedRoleFromRequest(any(ClassifierWithRolesRequest.class), any(), any());
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(objectMapper.writeValueAsString(classifierWithRolesRequest))
-                .when().post("/get-by-classifier/{type}", testType)
+                .when().post("/get-by-classifier/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(NOT_FOUND.getStatusCode());
 
         final DatabaseRegistry database = getDatabaseSample();
-        DatabaseResponseV3 response = new DatabaseResponseV3ListCP(database.getDatabaseRegistry().get(0), PHYSICAL_DATABASE_ID);
+        DatabaseResponseV3 response = new DatabaseResponseV3ListCP(database.getDatabaseRegistry().getFirst(), PHYSICAL_DATABASE_ID);
         when(dBaaService.processConnectionPropertiesV3(any(DatabaseRegistry.class), any())).thenReturn(response);
-        when(dBaaService.findDatabaseByClassifierAndType(classifier, testType, false)).thenReturn(database.getDatabaseRegistry().get(0));
+        when(dBaaService.findDatabaseByClassifierAndType(classifier, POSTGRESQL.toString(), false)).thenReturn(database.getDatabaseRegistry().getFirst());
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(objectMapper.writeValueAsString(classifierWithRolesRequest))
-                .when().post("/get-by-classifier/{type}", testType)
+                .when().post("/get-by-classifier/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(OK.getStatusCode())
                 .body("name", is(database.getName()));
@@ -637,12 +649,11 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     void testEmptyOriginServiceGetDatabaseByClassifier() throws JsonProcessingException {
         ClassifierWithRolesRequest classifierWithRolesRequest = new ClassifierWithRolesRequest();
         classifierWithRolesRequest.setOriginService(null);
-        final String testType = "test-type";
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
-                .pathParam(NAMESPACE_PARAMETER, "another-namespace")
+                .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(objectMapper.writeValueAsString(classifierWithRolesRequest))
-                .when().post("/get-by-classifier/{type}", testType)
+                .when().post("/get-by-classifier/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(BAD_REQUEST.getStatusCode());
     }
@@ -652,8 +663,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         ClassifierWithRolesRequest classifierWithRolesRequest = new ClassifierWithRolesRequest();
         final Map<String, Object> classifier = getSampleClassifier();
         classifierWithRolesRequest.setClassifier(classifier);
-        classifierWithRolesRequest.setOriginService("test");
-        final String testType = "test-type";
+        classifierWithRolesRequest.setOriginService(TEST_MS_NAME);
         classifierWithRolesRequest.setUserRole(null);
 
         when(dBaaService.isValidClassifierV3(any())).thenCallRealMethod();
@@ -662,7 +672,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(objectMapper.writeValueAsString(classifierWithRolesRequest))
-                .when().post("/get-by-classifier/{type}", testType)
+                .when().post("/get-by-classifier/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(FORBIDDEN.getStatusCode());
     }
@@ -677,6 +687,48 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .then()
                 .statusCode(OK.getStatusCode())
                 .body("global.name", is(databasesInfo.getGlobal().getName()));
+    }
+
+    @Test
+    void testGetDatabaseFromAnotherService_NoPolicy() throws JsonProcessingException {
+        ClassifierWithRolesRequest classifierWithRolesRequest = new ClassifierWithRolesRequest();
+        final Map<String, Object> classifier = getSampleClassifier();
+        classifierWithRolesRequest.setClassifier(classifier);
+        classifierWithRolesRequest.setOriginService(TEST_ANOTHER_MS_NAME);
+        classifierWithRolesRequest.setUserRole(ADMIN.toString());
+
+        when(dBaaService.isValidClassifierV3(any())).thenCallRealMethod();
+        when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(null);
+
+        given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
+                .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(objectMapper.writeValueAsString(classifierWithRolesRequest))
+                .when().post("/get-by-classifier/{type}", POSTGRESQL.toString())
+                .then()
+                .statusCode(FORBIDDEN.getStatusCode())
+                .body("message", stringContainsInOrder(classifierWithRolesRequest.getUserRole(), TEST_MS_NAME, TEST_ANOTHER_MS_NAME));
+    }
+
+    @Test
+    void testCannotDeleteDatabase_NoPolicy() {
+        ClassifierWithRolesRequest classifierWithRolesRequest = new ClassifierWithRolesRequest();
+        Map<String, Object> classifier = getSampleClassifier();
+        classifierWithRolesRequest.setClassifier(classifier);
+        classifierWithRolesRequest.setOriginService(TEST_ANOTHER_MS_NAME);
+        classifierWithRolesRequest.setUserRole(ADMIN.toString());
+
+        when(dbaaSHelper.isProductionMode()).thenReturn(false);
+        when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(null);
+
+        given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
+                .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(classifierWithRolesRequest)
+                .when().delete("/{type}", POSTGRESQL.toString())
+                .then()
+                .statusCode(FORBIDDEN.getStatusCode())
+                .body("message", stringContainsInOrder(classifierWithRolesRequest.getUserRole(), TEST_MS_NAME, TEST_ANOTHER_MS_NAME));
     }
 
     @Test
@@ -750,52 +802,51 @@ class AggregatedDatabaseAdministrationControllerV3Test {
 
     @Test
     void testDeleteDatabaseByClassifier() throws JsonProcessingException {
-        final String type = "postgresql";
         final UUID id = UUID.randomUUID();
         TreeMap<String, Object> classifier = new TreeMap<>(getSampleClassifier());
         ClassifierWithRolesRequest classifierWithRolesRequest = new ClassifierWithRolesRequest();
         classifierWithRolesRequest.setClassifier(classifier);
-        classifierWithRolesRequest.setUserRole(Role.ADMIN.toString());
-        classifierWithRolesRequest.setOriginService("test");
+        classifierWithRolesRequest.setUserRole(ADMIN.toString());
+        classifierWithRolesRequest.setOriginService(TEST_MS_NAME);
         when(dbaaSHelper.isProductionMode()).thenReturn(false);
-        doReturn(Role.ADMIN.toString()).when(databaseRolesService).getSupportedRoleFromRequest(any(ClassifierWithRolesRequest.class), any(), any());
+        doReturn(ADMIN.toString()).when(databaseRolesService).getSupportedRoleFromRequest(any(ClassifierWithRolesRequest.class), any(), any());
         String requestBody = objectMapper.writer().withDefaultPrettyPrinter().writeValueAsString(classifierWithRolesRequest);
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(OK.getStatusCode());
 
         final DatabaseRegistry database = getDatabaseSample();
         database.setId(id);
-        database.setType(type);
+        database.setType(POSTGRESQL.toString());
         database.setClassifier(classifier);
         database.setNamespace(TEST_NAMESPACE);
-        when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(classifier, type)).thenReturn(Optional.of(database.getDatabaseRegistry().get(0)));
+        when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(classifier, POSTGRESQL.toString())).thenReturn(Optional.of(database.getDatabaseRegistry().getFirst()));
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
-                .pathParam(NAMESPACE_PARAMETER, "another-namespace")
+                .pathParam(NAMESPACE_PARAMETER, TEST_ANOTHER_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(FORBIDDEN.getStatusCode());
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(OK.getStatusCode());
 
         database.setMarkedForDrop(false);
 
         verify(dBaaService, times(1)).dropDatabase(database);
-        verify(databaseRegistryDbaasRepository, times(1)).deleteById(database.getDatabaseRegistry().get(0).getId());
-        verify(databaseRegistryDbaasRepository, times(3)).getDatabaseByClassifierAndType(classifier, type);
+        verify(databaseRegistryDbaasRepository, times(1)).deleteById(database.getDatabaseRegistry().getFirst().getId());
+        verify(databaseRegistryDbaasRepository, times(3)).getDatabaseByClassifierAndType(classifier, POSTGRESQL.toString());
         verifyNoMoreInteractions(dBaaService, databaseRegistryDbaasRepository);
     }
 
@@ -805,35 +856,34 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         TreeMap<String, Object> classifier = new TreeMap<>(getSampleClassifier());
         ClassifierWithRolesRequest classifierWithRolesRequest = new ClassifierWithRolesRequest();
         classifierWithRolesRequest.setClassifier(classifier);
-        classifierWithRolesRequest.setUserRole(Role.ADMIN.toString());
-        classifierWithRolesRequest.setOriginService("test");
+        classifierWithRolesRequest.setUserRole(ADMIN.toString());
+        classifierWithRolesRequest.setOriginService(TEST_MS_NAME);
 
         String requestBody = objectMapper.writer().withDefaultPrettyPrinter().writeValueAsString(classifierWithRolesRequest);
-        final String type = "postgresql";
         when(dbaaSHelper.isProductionMode()).thenReturn(false);
-        doReturn(Role.ADMIN.toString()).when(databaseRolesService).getSupportedRoleFromRequest(any(ClassifierWithRolesRequest.class), any(), any());
+        doReturn(ADMIN.toString()).when(databaseRolesService).getSupportedRoleFromRequest(any(ClassifierWithRolesRequest.class), any(), any());
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(OK.getStatusCode());
         final DatabaseRegistry database = getDatabaseSample();
         database.setId(id);
-        database.setType(type);
+        database.setType(POSTGRESQL.toString());
         database.setClassifier(classifier);
         database.setNamespace(TEST_NAMESPACE);
-        database.getDatabaseRegistry().get(0).setNamespace(TEST_NAMESPACE);
-        database.getDatabaseRegistry().get(0).setClassifier(classifier);
+        database.getDatabaseRegistry().getFirst().setNamespace(TEST_NAMESPACE);
+        database.getDatabaseRegistry().getFirst().setClassifier(classifier);
         database.setMarkedForDrop(true);
-        doReturn(Optional.of(database.getDatabaseRegistry().get(0))).when(databaseRegistryDbaasRepository).getDatabaseByClassifierAndType(classifier, type);
+        doReturn(Optional.of(database.getDatabaseRegistry().getFirst())).when(databaseRegistryDbaasRepository).getDatabaseByClassifierAndType(classifier, POSTGRESQL.toString());
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
-                .pathParam(NAMESPACE_PARAMETER, "another-namespace")
+                .pathParam(NAMESPACE_PARAMETER, TEST_ANOTHER_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(FORBIDDEN.getStatusCode());
 
@@ -841,13 +891,13 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(OK.getStatusCode());
 
         verify(dBaaService, times(1)).dropDatabase(database);
-        verify(databaseRegistryDbaasRepository, times(1)).deleteById(database.getDatabaseRegistry().get(0).getId());
-        verify(databaseRegistryDbaasRepository, times(3)).getDatabaseByClassifierAndType(classifier, type);
+        verify(databaseRegistryDbaasRepository, times(1)).deleteById(database.getDatabaseRegistry().getFirst().getId());
+        verify(databaseRegistryDbaasRepository, times(3)).getDatabaseByClassifierAndType(classifier, POSTGRESQL.toString());
         verifyNoMoreInteractions(dBaaService, databaseRegistryDbaasRepository);
     }
 
@@ -857,34 +907,33 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         TreeMap<String, Object> classifier = new TreeMap<>(getSampleClassifier());
         ClassifierWithRolesRequest classifierWithRolesRequest = new ClassifierWithRolesRequest();
         classifierWithRolesRequest.setClassifier(classifier);
-        classifierWithRolesRequest.setUserRole(Role.ADMIN.toString());
-        classifierWithRolesRequest.setOriginService("test");
+        classifierWithRolesRequest.setUserRole(ADMIN.toString());
+        classifierWithRolesRequest.setOriginService(TEST_MS_NAME);
         String requestBody = objectMapper.writer().withDefaultPrettyPrinter().writeValueAsString(classifierWithRolesRequest);
-        final String type = "postgresql";
         when(dbaaSHelper.isProductionMode()).thenReturn(false);
-        doReturn(Role.ADMIN.toString()).when(databaseRolesService).getSupportedRoleFromRequest(any(ClassifierWithRolesRequest.class), any(), any());
+        doReturn(ADMIN.toString()).when(databaseRolesService).getSupportedRoleFromRequest(any(ClassifierWithRolesRequest.class), any(), any());
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(OK.getStatusCode());
 
         final DatabaseRegistry database = getDatabaseSample();
         database.setId(id);
-        database.setType(type);
+        database.setType(POSTGRESQL.toString());
         database.setClassifier(classifier);
         database.setNamespace(TEST_NAMESPACE);
         database.setMarkedForDrop(false);
-        when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(classifier, type)).thenReturn(Optional.of(database.getDatabaseRegistry().get(0)));
+        when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(classifier, POSTGRESQL.toString())).thenReturn(Optional.of(database.getDatabaseRegistry().getFirst()));
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
-                .pathParam(NAMESPACE_PARAMETER, "another-namespace")
+                .pathParam(NAMESPACE_PARAMETER, TEST_ANOTHER_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(FORBIDDEN.getStatusCode());
 
@@ -892,27 +941,27 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(OK.getStatusCode());
 
-        final String anotherType = "anotherType";
+        final String anotherType = CASSANDRA.toString();
         doReturn(Optional.empty()).when(databaseRegistryDbaasRepository).getDatabaseByClassifierAndType(classifier, anotherType);
 
         TreeMap<String, Object> anotherClassifier = new TreeMap<>(classifier);
         anotherClassifier.put("customKey", "customValue");
         ClassifierWithRolesRequest anotherClassifierWithRolesRequest = new ClassifierWithRolesRequest();
         anotherClassifierWithRolesRequest.setClassifier(anotherClassifier);
-        anotherClassifierWithRolesRequest.setUserRole(Role.ADMIN.toString());
-        anotherClassifierWithRolesRequest.setOriginService("test");
+        anotherClassifierWithRolesRequest.setUserRole(ADMIN.toString());
+        anotherClassifierWithRolesRequest.setOriginService(TEST_MS_NAME);
         String anotherRequestBody = objectMapper.writer().withDefaultPrettyPrinter().writeValueAsString(anotherClassifierWithRolesRequest);
-        when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(anotherClassifier, type)).thenReturn(Optional.empty());
+        when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(anotherClassifier, POSTGRESQL.toString())).thenReturn(Optional.empty());
 
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(anotherRequestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(OK.getStatusCode());
 
@@ -925,16 +974,15 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .statusCode(OK.getStatusCode());
 
         verify(dBaaService, times(1)).dropDatabase(database);
-        verify(databaseRegistryDbaasRepository, times(1)).deleteById(database.getDatabaseRegistry().get(0).getId());
-        verify(databaseRegistryDbaasRepository, times(3)).getDatabaseByClassifierAndType(classifier, type);
+        verify(databaseRegistryDbaasRepository, times(1)).deleteById(database.getDatabaseRegistry().getFirst().getId());
+        verify(databaseRegistryDbaasRepository, times(3)).getDatabaseByClassifierAndType(classifier, POSTGRESQL.toString());
         verify(databaseRegistryDbaasRepository, times(1)).getDatabaseByClassifierAndType(classifier, anotherType);
-        verify(databaseRegistryDbaasRepository, times(1)).getDatabaseByClassifierAndType(anotherClassifier, type);
+        verify(databaseRegistryDbaasRepository, times(1)).getDatabaseByClassifierAndType(anotherClassifier, POSTGRESQL.toString());
         verifyNoMoreInteractions(dBaaService, databaseRegistryDbaasRepository);
     }
 
     @Test
     void testCannotDeleteByIdWhenProfileIsProd() throws JsonProcessingException {
-        final String type = "postgresql";
         TreeMap<String, Object> classifier = new TreeMap<>(getSampleClassifier());
         String requestBody = objectMapper.writer().withDefaultPrettyPrinter().writeValueAsString(classifier);
         when(dbaaSHelper.isProductionMode()).thenReturn(true);
@@ -942,7 +990,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
                 .body(requestBody)
-                .when().delete("/{type}", type)
+                .when().delete("/{type}", POSTGRESQL.toString())
                 .then()
                 .statusCode(FORBIDDEN.getStatusCode());
     }
@@ -1004,7 +1052,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     }
 
     @Test
-    void testDeleteNothingInComposite() throws Exception {
+    void testDeleteNothingInComposite() {
         when(compositeNamespaceService.isNamespaceInComposite(TEST_NAMESPACE)).thenReturn(false);
         when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(Collections.emptyList());
         when(dBaaService.checkNamespaceAlreadyDropped(TEST_NAMESPACE, Collections.emptyList())).thenReturn(true);
@@ -1017,7 +1065,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     }
 
     @Test
-    void testDeleteOnlyComposite() throws Exception {
+    void testDeleteOnlyComposite() {
         when(compositeNamespaceService.isNamespaceInComposite(TEST_NAMESPACE)).thenReturn(true);
         when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(Collections.emptyList());
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
@@ -1032,7 +1080,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     void testDeleteAllInComposite() {
         when(compositeNamespaceService.isNamespaceInComposite(eq(TEST_NAMESPACE))).thenReturn(true);
         final DatabaseRegistry database = getDatabaseSample();
-        List<DatabaseRegistry> dbForDeletion = singletonList(database.getDatabaseRegistry().get(0));
+        List<DatabaseRegistry> dbForDeletion = singletonList(database.getDatabaseRegistry().getFirst());
         when(databaseRegistryDbaasRepository.findAnyLogDbRegistryTypeByNamespace(TEST_NAMESPACE)).thenReturn(dbForDeletion);
         when(dBaaService.deleteDatabasesAsync(eq(TEST_NAMESPACE), eq(dbForDeletion), anyBoolean())).thenReturn(1L);
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
@@ -1053,7 +1101,6 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .statusCode(OK.getStatusCode())
                 .body(is("namespace " + TEST_NAMESPACE + " doesn't contain any databases and namespace specific resources"));
     }
-
 
     @Test
     void saveExternalDatabaseSuccess() throws JsonProcessingException {
@@ -1080,7 +1127,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         DatabaseRegistry database = externalDatabaseRequest.toDatabaseRegistry();
         ArgumentCaptor<DatabaseRegistry> databaseCaptor = ArgumentCaptor.forClass(DatabaseRegistry.class);
         when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(eq(database.getClassifier()), eq(database.getType())))
-                .thenReturn(Optional.of(database.getDatabaseRegistry().get(0)));
+                .thenReturn(Optional.of(database.getDatabaseRegistry().getFirst()));
         when(dBaaService.processConnectionPropertiesV3(databaseCaptor.capture()))
                 .thenAnswer(i -> new DatabaseResponseV3ListCP((DatabaseRegistry) i.getArguments()[0], PHYSICAL_DATABASE_ID));
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
@@ -1090,14 +1137,14 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .when().put("/registration/externally_manageable")
                 .then()
                 .statusCode(OK.getStatusCode());
-        assertDatabasesRegistryEqual(database.getDatabaseRegistry().get(0), databaseCaptor.getValue());
+        assertDatabasesRegistryEqual(database.getDatabaseRegistry().getFirst(), databaseCaptor.getValue());
     }
 
     @Test
     void updateConnectionPropertiesExternalDatabaseExist() throws JsonProcessingException {
         List<Map<String, Object>> oldConnectionProperties = new ArrayList<>();
         Map<String, Object> firstConnectionProperty = new HashMap<>();
-        firstConnectionProperty.put(ROLE, Role.ADMIN.toString());
+        firstConnectionProperty.put(ROLE, ADMIN.toString());
         firstConnectionProperty.put("username", "user1");
         firstConnectionProperty.put("password", "password1");
         oldConnectionProperties.add(firstConnectionProperty);
@@ -1108,7 +1155,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         DatabaseRegistry database = externalDatabaseRequest.toDatabaseRegistry();
 
         Map<String, Object> newConnectionProperty = new HashMap<>();
-        newConnectionProperty.put(ROLE, Role.ADMIN.toString());
+        newConnectionProperty.put(ROLE, ADMIN.toString());
         newConnectionProperty.put("username", "user2");
         newConnectionProperty.put("password", "password2");
         List<Map<String, Object>> newConnectionProperties = new ArrayList<>(oldConnectionProperties);
@@ -1116,7 +1163,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         externalDatabaseRequest.setConnectionProperties(newConnectionProperties);
 
         when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(eq(database.getClassifier()), eq(database.getType())))
-                .thenReturn(Optional.of(database.getDatabaseRegistry().get(0)));
+                .thenReturn(Optional.of(database.getDatabaseRegistry().getFirst()));
         ArgumentCaptor<DatabaseRegistry> saveDatabaseCaptor = ArgumentCaptor.forClass(DatabaseRegistry.class);
         when(dBaaService.saveExternalDatabase(saveDatabaseCaptor.capture())).thenAnswer(i -> i.getArguments()[0]);
         ArgumentCaptor<DatabaseRegistry> processDatabaseCaptor = ArgumentCaptor.forClass(DatabaseRegistry.class);
@@ -1129,8 +1176,8 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .when().put("/registration/externally_manageable")
                 .then()
                 .statusCode(CREATED.getStatusCode());
-        assertDatabasesRegistryEqual(database.getDatabaseRegistry().get(0), saveDatabaseCaptor.getValue());
-        assertDatabasesRegistryEqual(database.getDatabaseRegistry().get(0), processDatabaseCaptor.getValue());
+        assertDatabasesRegistryEqual(database.getDatabaseRegistry().getFirst(), saveDatabaseCaptor.getValue());
+        assertDatabasesRegistryEqual(database.getDatabaseRegistry().getFirst(), processDatabaseCaptor.getValue());
     }
 
     @Test
@@ -1140,7 +1187,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
 
         DatabaseRegistry existingDatabaseRegistry = externalDatabaseRequest.toDatabaseRegistry();
         when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(eq(existingDatabaseRegistry.getClassifier()), eq(existingDatabaseRegistry.getType())))
-                .thenReturn(Optional.of(existingDatabaseRegistry.getDatabaseRegistry().get(0)));
+                .thenReturn(Optional.of(existingDatabaseRegistry.getDatabaseRegistry().getFirst()));
 
         externalDatabaseRequest.setConnectionProperties(new ArrayList<>());
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
@@ -1161,7 +1208,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         DatabaseRegistry existingDatabase = externalDatabaseRequest.toDatabaseRegistry();
         existingDatabase.setExternallyManageable(false);
         when(databaseRegistryDbaasRepository.getDatabaseByClassifierAndType(eq(database.getClassifier()), eq(database.getType())))
-                .thenReturn(Optional.of(existingDatabase.getDatabaseRegistry().get(0)));
+                .thenReturn(Optional.of(existingDatabase.getDatabaseRegistry().getFirst()));
         given().auth().preemptive().basic("cluster-dba", "someDefaultPassword")
                 .pathParam(NAMESPACE_PARAMETER, TEST_NAMESPACE)
                 .contentType(MediaType.APPLICATION_JSON)
@@ -1182,7 +1229,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         when(physicalDatabasesService.getByAdapterId(any())).thenReturn(physicalDatabase);
         when(declarativeConfigRepository.findFirstByClassifierAndType(any(), any())).thenReturn(Optional.empty());
 
-        when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(Role.ADMIN.toString());
+        when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(ADMIN.toString());
 
         DatabaseRegistry[] savedDatabase = new DatabaseRegistry[1];
         when(databaseRegistryDbaasRepository.saveAnyTypeLogDb(any(DatabaseRegistry.class))).thenAnswer(invocationOnMock -> {
@@ -1219,9 +1266,9 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     @Test
     void testStatusWhenThereAreNoAdapter() throws JsonProcessingException {
         final DatabaseCreateRequestV3 databaseCreateRequest = getDatabaseCreateRequestSample();
-        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(Role.ADMIN.toString());
+        Mockito.when(databaseRolesService.getSupportedRoleFromRequest(any(DatabaseCreateRequestV3.class), any(), any())).thenReturn(ADMIN.toString());
         when(databaseRegistryDbaasRepository.saveAnyTypeLogDb(any(DatabaseRegistry.class))).thenThrow(new ConstraintViolationException("constraint violation", new PSQLException("constraint violation", PSQLState.UNIQUE_VIOLATION), "database_registry_classifier_and_type_index"));
-        when(dBaaService.findDatabaseByClassifierAndType(any(), any(), anyBoolean())).thenReturn(getDatabaseSample().getDatabaseRegistry().get(0));
+        when(dBaaService.findDatabaseByClassifierAndType(any(), any(), anyBoolean())).thenReturn(getDatabaseSample().getDatabaseRegistry().getFirst());
         when(declarativeConfigRepository.findFirstByClassifierAndType(any(), any())).thenReturn(Optional.empty());
 
         databaseCreateRequest.setSettings(
@@ -1240,23 +1287,23 @@ class AggregatedDatabaseAdministrationControllerV3Test {
 
     private ExternalDatabaseRequestV3 getExternalDatabaseRequestObject() {
         SortedMap<String, Object> classifier = new TreeMap<>();
-        classifier.put("microserviceName", "test");
+        classifier.put("microserviceName", TEST_MS_NAME);
         classifier.put("namespace", TEST_NAMESPACE);
         classifier.put("scope", "service");
         Map<String, Object> cp = new HashMap<>();
-        cp.put(ROLE, Role.ADMIN.toString());
+        cp.put(ROLE, ADMIN.toString());
         return new ExternalDatabaseRequestV3(classifier, singletonList(cp), "tarantool", "external-db");
     }
 
     private DatabaseCreateRequestV3 getDatabaseCreateRequestSample(Map<String, Object> classifier) {
-        DatabaseCreateRequestV3 request = new DatabaseCreateRequestV3(classifier, "test-type");
-        return request;
+        return new DatabaseCreateRequestV3(classifier, POSTGRESQL.toString());
     }
 
     private DatabaseCreateRequestV3 getDatabaseCreateRequestSample() {
         final Map<String, Object> classifier = getSampleClassifier();
-        DatabaseCreateRequestV3 request = new DatabaseCreateRequestV3(classifier, "test-type");
-        request.setOriginService("test_name");
+        DatabaseCreateRequestV3 request = new DatabaseCreateRequestV3(classifier, POSTGRESQL.toString());
+        request.setUserRole(ADMIN.toString());
+        request.setOriginService(TEST_MS_NAME);
         return request;
     }
 
@@ -1264,7 +1311,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         final Map<String, Object> classifier = new HashMap<>();
         classifier.put("namespace", TEST_NAMESPACE);
         classifier.put("scope", "service");
-        classifier.put("microserviceName", "test_name");
+        classifier.put("microserviceName", TEST_MS_NAME);
         return classifier;
     }
 
@@ -1272,7 +1319,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
         final Database database = new Database();
         database.setName(TEST_NAME);
         HashMap<String, Object> cp = new HashMap<>();
-        cp.put(ROLE, Role.ADMIN.toString());
+        cp.put(ROLE, ADMIN.toString());
         database.setConnectionProperties(singletonList(cp));
         DatabaseRegistry databaseRegistry = new DatabaseRegistry();
         databaseRegistry.setId(UUID.randomUUID());
@@ -1287,16 +1334,15 @@ class AggregatedDatabaseAdministrationControllerV3Test {
     private CreatedDatabaseV3 getCreatedDatabaseV3Sample() {
         final CreatedDatabaseV3 createdDatabase = new CreatedDatabaseV3();
         createdDatabase.setName(TEST_NAME);
-        createdDatabase.setConnectionProperties(singletonList(new HashMap<String, Object>() {{
-            put(ROLE, Role.ADMIN.toString());
+        createdDatabase.setConnectionProperties(singletonList(new HashMap<>() {{
+            put(ROLE, ADMIN.toString());
         }}));
         return createdDatabase;
     }
 
     private DatabasesInfo getDatabasesInfoSample() {
         final DatabasesInfoSegment databasesInfoSegment = new DatabasesInfoSegment("test-dbis", null, null, null);
-        final DatabasesInfo databasesInfo = new DatabasesInfo(databasesInfoSegment, singletonList(databasesInfoSegment));
-        return databasesInfo;
+        return new DatabasesInfo(databasesInfoSegment, singletonList(databasesInfoSegment));
     }
 
     private void assertDatabasesEqual(DatabaseRegistry database, DatabaseRegistry capturedDatabase) {
@@ -1306,7 +1352,7 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .peek(db -> db.setTimeDbCreation(null))
                 .peek(db -> db.getDatabase().setId(null))
                 .peek(db -> db.getDatabase().setTimeDbCreation(null))
-                .collect(Collectors.toList());
+                .toList();
         Assertions.assertEquals(database, capturedDatabase);
     }
 
@@ -1316,9 +1362,8 @@ class AggregatedDatabaseAdministrationControllerV3Test {
                 .peek(db -> db.setId(null))
                 .peek(db -> db.setTimeDbCreation(null))
                 .peek(db -> db.getDatabase().setId(null))
-//                .peek(db -> db.getDatabaseRegistry().get(0).setDatabase(null))
                 .peek(db -> db.getDatabase().setTimeDbCreation(null))
-                .collect(Collectors.toList());
+                .toList();
         Assertions.assertEquals(database, capturedDatabase);
     }
 }
